# ets_registries

./: .gitattributes  .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
_output/: facility_level.csv  sector_level.csv  sector_level_isic3.csv
_raw/california/: 2016-ghg-emissions-2022-11-04.xlsx  2018-ghg-emissions-2022-11-04.xlsx  2020-ghg-emissions-2024-11-15.xlsx  2023-ghg-emissions_2025_11_04.xlsx  2024-ghg-emissions-2025-11-04.xlsx
_raw/california/allowanceAllocation/: nc-allocation_v2023.csv
_raw/california/emissions/: 2012-ghg-emissions-2025-12-11.xlsx  2017-ghg-emissions-2022-11-04.xlsx  2019-ghg-emissions-2023-11-06.xlsx  2021-ghg-emissions-2023-11-06.xlsx  2022-ghg-emissions_2025_11_04.xlsx
_raw/eutl_2024_202410/: account.csv  activity_type.csv  compliance.csv  country_code.csv  foha_matching.csv  installation.csv  nace_code.csv  project.csv  surrender.csv  transaction_type_main.csv
_raw/ukets/: 20250611_Compliance_Report_Emissions_and_Surrenders.xlsx  ukets-allocation-table-december-2025.xlsx
code/: generate_docs.py
code/plotting/: eutets_plots.py
code/registry_processing/: harmonize.py  pipeline.py
docs/: concordance.md  data-sources.md  getting-started.md  index.md  pipeline.md  validation.md
docs/_generated/: schemas.md
docs/ets/: california.md  euets.md  ukets.md
docs/reference/: california.md  euets.md  harmonize.md  pipeline.md  ukets.md
ets_registries.egg-info/: PKG-INFO  SOURCES.txt
src/: docsgen.py
src/plotting/: plot_isic3_free_share.py
src/registry_processing/: harmonize.py  pipeline.py
(+42 files in other folders)
