[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ets-registries"
version = "0.1.0"
description = "Integrated processing pipeline for ETS registries (EU ETS, UK ETS, California)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "openpyxl>=3.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["registry_processing*"]
